@@ -1,5 +1,5 @@
-# x86-mingw32-build.sh.getopts -*- sh -*- -- vim: filetype=sh
-# $Id: x86-mingw32-build.sh.getopts,v 1.2 2008-01-13 18:16:53 mgdde Exp $
+# x86-mingw32-build.sh.getopts -*- sh -*- vim: filetype=sh
+# $Id: x86-mingw32-build.sh.getopts,v 1.3 2009-02-19 19:02:27 keithmarshall Exp $
 #
 # Interpret command line arguments given to the x86-mingw32-build script.
 #
@@ -60,7 +60,7 @@ do
         --batch | --unattended)
                           BUILD_METHOD=batch ;;
 
-        --dry-run)        RUN=echo ;;
+        --dry-run)        RUN=echo BUILD_PLATFORM='`../config.guess`' ;;
 
         --download)       ALLOW_DOWNLOADS=YES ;;
         --no-download)    ALLOW_DOWNLOADS=NO ;;
@@ -96,4 +96,4 @@ do
 done
 eval set x $new_argv; shift
 
-# $RCSfile: x86-mingw32-build.sh.getopts,v $Revision: 1.2 $: end of file
+# $RCSfile: x86-mingw32-build.sh.getopts,v $Revision: 1.3 $: end of file
